boxoffice upload dag update & last dag update

--- a/spark_process_etl.ipynb
+++ b/spark_process_etl.ipynb
@@ -1083,6 +1083,51 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from google.cloud import bigquery\n",
+    "from google.cloud import bigquery\n",
+    "from google.oauth2 import service_account\n",
+    "\n",
+    "# bigquery 설정\n",
+    "project_id = \"<project_id>\"     # gcp 프로젝트 id\n",
+    "dataset_id = \"movie_reviews\"  # 빅쿼리 데이터셋\n",
+    "#table_id = \"review_data\"    # 빅쿼리 테이블명\n",
+    "key_path = GOOGLE_APPLICATION_CREDENTIALS       # 서비스 계정 키 경로\n",
+    "\n",
+    "def upload_parquet_to_bigquery(gcs_path: str, table_id: str):\n",
+    "    '''\n",
+    "    GCS에 있는 Parquet 파일을 BigQuery로 업로드하는 함수.\n",
+    "    '''\n",
+    "    # 자격증명 및 클라이언트 초기화\n",
+    "    credentials = service_account.Credentials.from_service_account_file(key_path)\n",
+    "    client = bigquery.Client(credentials=credentials, project=project_id)\n",
+    "\n",
+    "    \n",
+    "    job_config = bigquery.LoadJobConfig(\n",
+    "        source_format=bigquery.SourceFormat.PARQUET,\n",
+    "        write_disposition=\"WRITE_TRUNCATE\"  # 기존 테이블 덮어쓰기\n",
+    "    )\n",
+    "    # 테이블 id 전체 경로\n",
+    "    table_ref = f\"{project_id}.{dataset_id}.{table_id}\"\n",
+    "    \n",
+    "    load_job = client.load_table_from_uri(\n",
+    "        gcs_path, table_ref, job_config=job_config\n",
+    "    )\n",
+    "    \n",
+    "    load_job.result()\n",
+    "    print(f\"[DONE] {gcs_path} -> {table_id} 업로드 완료\")\n",
+    "\n",
+    "upload_parquet_to_bigquery(\n",
+    "    gcs_path=\"gs://movie_info_and_reviews/movie_reviews/megabox_keywords.parquet/*.parquet\",\n",
+    "    table_id=\"megabox_keywords\"\n",
+    ")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1509,60 +1554,6 @@
     "\n",
     "# 저장\n",
     "df_keywords.write.mode(\"overwrite\").parquet(\"gs://movie_info_and_reviews/movie_reviews/movie_keywords.parquet\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[DONE] gs://movie_info_and_reviews/movie_reviews/movie_keywords.parquet/*.parquet -> movie_wordcloud 업로드 완료\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 워드클라우드용 키워드 분리한거 빅쿼리 업로드\n",
-    "from google.cloud import bigquery\n",
-    "from google.cloud import bigquery\n",
-    "from google.oauth2 import service_account\n",
-    "\n",
-    "# bigquery 설정\n",
-    "project_id = \"<project_id>\"     # gcp 프로젝트 id\n",
-    "dataset_id = \"movie_reviews\"  # 빅쿼리 데이터셋\n",
-    "#table_id = \"review_data\"    # 빅쿼리 테이블명\n",
-    "key_path = GOOGLE_APPLICATION_CREDENTIALS       # 서비스 계정 키 경로\n",
-    "\n",
-    "def upload_parquet_to_bigquery(gcs_path: str, table_id: str):\n",
-    "    '''\n",
-    "    GCS에 있는 Parquet 파일을 BigQuery로 업로드하는 함수.\n",
-    "    '''\n",
-    "    # 자격증명 및 클라이언트 초기화\n",
-    "    credentials = service_account.Credentials.from_service_account_file(key_path)\n",
-    "    client = bigquery.Client(credentials=credentials, project=project_id)\n",
-    "\n",
-    "    \n",
-    "    job_config = bigquery.LoadJobConfig(\n",
-    "        source_format=bigquery.SourceFormat.PARQUET,\n",
-    "        write_disposition=\"WRITE_TRUNCATE\"  # 기존 테이블 덮어쓰기\n",
-    "    )\n",
-    "    # 테이블 id 전체 경로\n",
-    "    table_ref = f\"{project_id}.{dataset_id}.{table_id}\"\n",
-    "    \n",
-    "    load_job = client.load_table_from_uri(\n",
-    "        gcs_path, table_ref, job_config=job_config\n",
-    "    )\n",
-    "    \n",
-    "    load_job.result()\n",
-    "    print(f\"[DONE] {gcs_path} -> {table_id} 업로드 완료\")\n",
-    "\n",
-    "upload_parquet_to_bigquery(\n",
-    "    gcs_path=\"gs://movie_info_and_reviews/movie_reviews/movie_keywords.parquet/*.parquet\",\n",
-    "    table_id=\"movie_wordcloud\"\n",
-    ")"
    ]
   },
   {
